completed 3.6 styling the menu

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -103,7 +103,13 @@
     <Content Include="ext-modules\psFramework\psFrameworkDirective.js" />
     <Content Include="ext-modules\psFramework\psFrameworkModule.js" />
     <Content Include="ext-modules\psFramework\psFrameworkTemplate.html" />
+    <Content Include="ext-modules\psMenu\psMenu.css" />
+    <Content Include="ext-modules\psMenu\psMenuController.js" />
+    <Content Include="ext-modules\psMenu\psMenuDirective.js" />
+    <Content Include="ext-modules\psMenu\psMenuItemDirective.js" />
+    <Content Include="ext-modules\psMenu\psMenuItemTemplate.html" />
     <Content Include="ext-modules\psMenu\psMenuModule.js" />
+    <Content Include="ext-modules\psMenu\psMenuTemplate.html" />
     <Content Include="images\photo.jpg" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
