--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -101,6 +101,7 @@
     <Content Include="app\directives\dwaDashboardDirective.js" />
     <Content Include="app\directives\dwaGuidesDirective.js" />
     <Content Include="app\directives\dwaLocationsDirective.js" />
+    <Content Include="app\services\dataService.js" />
     <Content Include="Content\angular-gridster.min.css" />
     <Content Include="ext-modules\psDashboard\psDashboard.css" />
     <Content Include="ext-modules\psDashboard\psDashboardDirective.js" />
